# ruby-marshal

./: Cargo.toml  LICENSE.BSD-2-Clause  LICENSE.MIT  README.md
.github/workflows/: rust.yml
ruby-marshal/: Cargo.toml
ruby-marshal-derive/: Cargo.toml
ruby-marshal-derive/src/: lib.rs  utils.rs
ruby-marshal/examples/derive/: main.rs
ruby-marshal/examples/value/: main.rs
ruby-marshal/src/: de.rs  lib.rs  value.rs
ruby-marshal/src/de/: impls.rs
ruby-marshal/tests/: test_vectors.rs
ruby-marshal/tests/test-vectors/: object_links_nested.expected-ValueHL.txt  object_links_nested.expected-ValueLL.txt  object_links_nested.rb  object_links_object.expected-ValueHL.txt  object_links_object.expected-ValueLL.txt  object_links_object.rb  recursion_limit_array.rb  stack_depth_limit_array.rb  types_playground.expected-ValueHL.txt  types_playground.expected-ValueLL.txt  types_playground.rb
xtask/: Cargo.toml
xtask/ruby_include/: test_harness.rb
xtask/src/: main.rs
